--- a/fight-stick-example.css
+++ b/fight-stick-example.css
@@ -28,6 +28,7 @@ the CSS inline. */
 .custom .sticks{
 
 }
+
 .custom .stick.left{
   display: inline-block;
   width: 150px;
@@ -35,8 +36,8 @@ the CSS inline. */
   position: absolute;
   bottom: 50px;
   right: 425px;
-  background-size: contain;
-  background-image: url(drive%20parry.png);
+  background-size: contain; 
+  background-image: url('buttons/drive\ parry.png');
 }
 /* Dpad positioning and sizing */
 .custom .dpad{
